# ai-assistant-duplocloud

./: .env.tmpl  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/.streamlit/: config.toml
src/api/: app.py  schemas.py
src/constants/: embeddings.py  llms.py  models.py  store.py
src/db/chroma/: chroma.sqlite3
src/service/: workflow.py
src/service/rag/: loader.py  train.py
src/service/tools/: math.py  rag.py  search.py
src/ui/: app.py  train.py
src/ui/store/: chat.py  train.py
src/utils/: errors.py  validations.py
