[project]
name = "ai-assistant-duplocloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi[all]>=0.115.9",
    "google-generativeai>=0.8.4",
    "langchain-community>=0.3.18",
    "langchain>=0.3.19",
    "langchain-google-genai>=2.0.10",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
    "chroma>=0.2.0",
    "chromadb>=0.6.3",
    "langchain-openai>=0.3.7",
    "tavily-python>=0.5.1",
    "youtube-transcript-api>=0.6.3",
    "youtube-search>=2.1.2",
]
